# spark-examples

./: .gitignore  README.md
marimo/: README.md  load-data.py  pyproject.toml  simple.py
marimo/data/: author.parquet  book-author-rel.csv  book-author-rel.parquet  book.parquet  user.csv  user.parquet
marimo/data/book/: book-author-rel.parquet
marimo/data/user/: user.json  user2.csv
marimo/notebooks/: 01-simple.py  02-load-data.py  03-transformation.py  04-joins.py  04-queries.py  05-joins.py  06-tables.py  06-unity-catalog.py  10-book-sales.py  3-joins.py  3-transformation.py  4-tables.py  joins.py  load-data.py  simple.py  transformation.py
pure-python/: README.md  main.py  pyproject.toml
tutorial/: 0-meta.md  1-general.md  2-pyspark.md  3-databricks.md  4-questions.md  dlt.md  ingestion.md
